# RobustForSdk

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  oubowu_test_sign.jks  proguard-rules.pro
app/src/androidTest/java/com/oubowu/robustforsdk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/oubowu/robustforsdk/: MPermissionUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/oubowu/robustforsdk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle  lib-proguard-rules.pro  proguard-rules.pro  robust.xml
sdk/robust/: mapping.txt  methodsMap.robust
sdk/robustjar/develop/release/: mapping.txt
sdk/robustjar/develop/release/origin/: R.txt
sdk/robustjar/develop/release/origin/assets/: robust.apkhash
sdk/robustjar/normal/release/: mapping.txt  methodsMap.robust
sdk/robustjar/normal/release/origin/: AndroidManifest.xml
sdk/robustjar/normal/release/origin/assets/: robust.apkhash
sdk/src/androidTest/java/com/oubowu/sdk/: ExampleInstrumentedTest.java
sdk/src/main/debug/: AndroidManifest.xml
sdk/src/main/release/: AndroidManifest.xml
secret/: CMakeLists.txt  build.gradle
secret/src/androidTest/java/com/oubowu/secret/: ExampleInstrumentedTest.java
secret/src/main/: AndroidManifest.xml
secret/src/main/cpp/: secret-lib.cpp
secret/src/main/java/com/oubowu/secret/: NdkHelper.java
secret/src/test/java/com/oubowu/secret/: ExampleUnitTest.java
(+5 files in other folders)
